force-app/main/default/objects/PEG_Query__mdt/PEG_Query__mdt.object-meta.xml
<CustomObject>
    <description>This is a custom metadata to authorize certain SOQL queries to bypass sharing and / or FLS controls in the PEG_SoqlOperation_CTL controller.</description>
    <label>PEG Query</label>
    <pluralLabel>PEG Queries</pluralLabel>
</CustomObject>