force-app/main/default/objects/PEG_Query__mdt/fields/Bypass_FLS__c.field-meta.xml
<CustomField>
    <fullName>Bypass_FLS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to authorize the matched query to bypass FLS.</description>
    <label>Bypass FLS</label>
    <type>Checkbox</type>
</CustomField>