force-app/main/default/objects/PEG_Query__mdt/fields/Bypass_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to authorize the matched query to bypass Sharing</description>
    <label>Bypass Sharing</label>
    <type>Checkbox</type>
</CustomField>