force-app/main/default/objects/PEG_Query__mdt/fields/SOQL_RegExp__c.field-meta.xml
<CustomField>
    <fullName>SOQL_RegExp__c</fullName>
    <description>Regular expression the SOQL query should match to be authorized to bypass FLS and/or Sharing rules.</description>
    <label>SOQL RegExp</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>